--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 attrs==25.3.0
 Django==5.1.7
 django-cors-headers==4.4.0
+django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-spectacular==0.28.0
@@ -9,6 +10,7 @@ gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+Markdown==3.7
 packaging==24.2
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
