--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,10 @@ API_SECRET_KEY='really_long_and_random_String'
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 CSFR_TRUSTED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
 CORS_ALLOWED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
+EMAIL_CHANNEL=sendgrid
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER="username"
+EMAIL_HOST_PASSWORD="smtp_password"
+EMAIL_USE_TLS=True
+SENDGRID_API_KEY=
