--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -8,16 +8,21 @@ djangorestframework_simplejwt==5.4.0
 drf-spectacular==0.28.0
 gunicorn==23.0.0
 inflection==0.5.1
+Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 Markdown==3.7
+MarkupSafe==3.0.2
 packaging==24.2
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dotenv==1.0.1
+python-http-client==3.3.7
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
+sendgrid==6.11.0
 sqlparse==0.5.3
+starkbank-ecdsa==2.2.0
 typing_extensions==4.13.0
 uritemplate==4.1.1
